fix letter-spacing

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ h1 {
   font-family: 'Montserrat', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 700;
   font-size: 30px;
-  letter-spacing: 9px;
+  letter-spacing: 5px;
   text-transform: uppercase;
   margin: 12px 0;
   left: 4px;
